<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">News</string>
    <string name="hello_world">Hello world!</string>
   <string name="action_settings">Settings</string>
 <string name="action_refresh">Refresh</string>
   <string name="action_login">Login</string>
   <string name="action_register">Register</string>
  
   <string name="action_exit">Exit</string>
  
    <string name="drawer_open">News Opened</string>
    <string name="drawer_close">News Closed</string>
     <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
      
        <item >India</item>
        <item >World</item>
        <item >Business</item>
        <item >Technology</item>
        <item >Entertainment</item>
        <item >Sports</item>
        <item>science</item>
        <item >Health</item>
        <item >More Top Stories</item>
        <item >Spotlight</item>
    </string-array>
  
</resources>
