<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
  <item
        android:id="@+id/Settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
 <item
        android:id="@+id/Refresh"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_refresh"/>
 <item
        android:id="@+id/Login"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_login"/>
 <item
        android:id="@+id/Register"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_register"/>

     
 
 <item 
     android:id="@+id/Lgout"
     android:orderInCategory="100"
     android:showAsAction="never"
     android:title="Logout"/>
 <item
        android:id="@+id/Exit"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_exit"/>
    
</menu>
